2007-12-28  Roger Leigh  <rleigh@debian.org>

	* Update copyright and GPL2+ licence boilerplate on all files.

2007-12-27  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Create lib/Sbuild/Sysconfig.pm.  Don't create
	lib/Sbuild/Log.pm.

	* lib/Sbuild/Sysconfig.pm.in: New file.  Generate with version
	number, and determine hostname and arch.  Export arch, hostname
	and version.

	* lib/Sbuild/Log.pm: Rename from lib/Sbuild/Log.pm.in.  Remove
	substituted @VERSION@ and hostname and arch determination.

2007-12-27  Roger Leigh  <rleigh@debian.org>

	* debian/*: Update packaging to use new autoconf/make.  See
	debian/changelog.

	* scripts/sbuild_release.m4.in: New file for generating release
	date.

	* scripts/global.mk: Global automake defaults.

	* */.gitignore: Update with new generated files.

	* man/*.1.in, man/*.7.in: Use @RELEASE_DATE@.

	* debian/.cvsignore: Remove.

	* bin/add_sbuild_user: Move from chroot/.

	* TODO: Add checkchroot updates.

	* lib/Sbuild*: Move from Sbuild*.

	* README: Move from chroot/README.

	* bootstrap: Add autotools bootstrap script.

	* configure.ac: Add autoconf template.

	* */Makefile.am: Add automake templates.

	* AUTHORS: New file.

	* ChangeLog: Start upstream changelog.

