@@ -9,5 +9,7 @@ valid.
 
 checkchroot should be able to dump a chroot reference list.
 
+sbuild-createchroot should import most of buildd-make-chroot.
+
 Provide a way of generating current reference lists from debootstrapped chroots.
 Make sbuild-createchroot create an initial reference list on chroot creation.
