@@ -1,8 +1,10 @@
-debian/install/etc/sbuild                           etc
-debian/install/usr/bin/sbuild*                      usr/bin
-debian/install/usr/lib/sbuild                       usr/lib
-debian/install/usr/share/doc/sbuild                 usr/share/doc
-debian/install/usr/share/man/man1/avg-pkg-build-**  usr/share/man/man1
-debian/install/usr/share/man/man1/sbuild*           usr/share/man/man1
-debian/install/usr/share/man/man7/sbuild*           usr/share/man/man7
-debian/install/usr/share/perl5/Sbuild*              usr/share/perl5
+debian/install/etc/sbuild                          etc
+debian/install/usr/bin/sbuild*                     usr/bin
+debian/install/usr/sbin/sbuild*                    usr/sbin
+debian/install/usr/lib/sbuild                      usr/lib
+debian/install/usr/share/doc/sbuild                usr/share/doc
+debian/install/usr/share/man/man1/avg-pkg-build-*  usr/share/man/man1
+debian/install/usr/share/man/man1/sbuild*          usr/share/man/man1
+debian/install/usr/share/man/man7/sbuild*          usr/share/man/man7
+debian/install/usr/share/man/man8/sbuild*          usr/share/man/man8
+debian/install/usr/share/perl5/Sbuild*             usr/share/perl5
