@@ -1,0 +1,62 @@
+.\" Copyright © 2005-2007  Roger Leigh <rleigh@debian.org>
+.\"
+.\" This program is free software: you can redistribute it and/or modify
+.\" it under the terms of the GNU General Public License as published by
+.\" the Free Software Foundation, either version 2 of the License, or
+.\" (at your option) any later version.
+.\"
+.\" This program is distributed in the hope that it will be useful, but
+.\" WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+.\" General Public License for more details.
+.\"
+.\" You should have received a copy of the GNU General Public License
+.\" along with this program.  If not, see
+.\" <http://www.gnu.org/licenses/>.
+.TH SBUILD\-ADDUSER 1 "@RELEASE_DATE@" "Version @VERSION@" "Debian sbuild"
+.SH NAME
+sbuild\-adduser \- add an sbuild user
+.SH SYNOPSIS
+.B sbuild\-adduser
+.B user1
+.RB "[ " user2 " [ " user\f[BI]n\fP... ]]
+.SH DESCRIPTION
+\fBsbuild\-adduser\fR adds the specified users to the \fIsbuild\fP group,
+granting them the privelege to build packages with
+.BR sbuild (1).
+The 
+.BR schroot (1)
+configuration must permit the user to obtain root permissions in the chroot via
+the \f[CI]root\-users\fP and \f[CI]root\-groups\fP options in
+\fIschroot.conf\fP, because this is required to install and remove
+build-dependencies inside the chroot.  This is normally done using the
+\fIsbuild\fP group, but additional users or groups may be added in order to
+grant finer-grained permissions, for example to restrict individual users to
+particular chroots.
+.SH OPTIONS
+.TP
+.I user
+The user to be granted sbuild access.
+.SH EXAMPLES
+To allow user \fIrleigh\fP sbuild access:
+.PP
+\f[CR]% \f[CB]sudo sbuild\-adduser rleigh\fP\fP
+.br
+.SH AUTHORS
+.nf
+Roger Leigh.
+.fi
+.SH COPYRIGHT
+.nf
+Copyright \[co] 2006\[en]2007 Roger Leigh <rleigh@debian.org>.
+.fi
+.SH "SEE ALSO"
+.BR sbuild (1),
+.BR sbuild\-setup (7),
+.BR schroot.conf (5).
+.\"#
+.\"# The following sets edit modes for GNU EMACS
+.\"# Local Variables:
+.\"# mode:nroff
+.\"# fill-column:79
+.\"# End:
